# asteroid-game-launcher

./: .gitlab-ci.yml  README.md  asgardius.page.asteroidlauncher.json  com.example.first_application.json  meson.build
.flatpak-builder/checksums/: x86_64-asgardius.page.asteroidlauncher.json  x86_64-com.example.first_application.json
build-aux/meson/: postinstall.py
data/: asgardius.page.asteroidlauncher.desktop  com.example.first_application.desktop  meson.build
src/: main.py  meson.build  wget-log
