configure_file(
  input: 'asgardius.page.asteroidlauncher.desktop',
  output: 'asgardius.page.asteroidlauncher.desktop',
  copy: true,
  install: true,
  install_dir: join_paths(get_option('datadir'), 'applications')
)

install_data('asgardius.page.asteroidlauncher.svg',
  install_dir: join_paths(get_option('datadir'), 'icons', 'hicolor', 'scalable', 'apps'))
